fixing menu item alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@
 
 * {
   border: none;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
